# Crabeam

./: Cargo.toml  LICENSE  README.md  TERMS  about.toml
.github/workflows/: build-web.yml  build.yml
crabeam-host/crabeam/: package.json  pnpm-lock.yaml
crabeam-host/crabeam-cli/: Cargo.toml
crabeam-host/crabeam-cli/src/: main.rs
crabeam-host/crabeam-host-core/: Cargo.toml
crabeam-host/crabeam-host-core/src/: handlers.rs  lib.rs  router.rs  signaling.rs  state.rs  utils.rs  webrtc.rs  whip.rs
crabeam-host/crabeam/src/: App.tsx  bindings.ts  preview.ts
crabeam-host/crabeam/src-tauri/: Cargo.toml  tauri.conf.json
crabeam-host/crabeam/src-tauri/icons/: icon.icns
crabeam-host/crabeam/src-tauri/src/: lib.rs  main.rs
crabeam-viewer/crabeam-site/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
crabeam-viewer/crabeam-site/public/: App-ThirdPartyLicenses.html  Web-ThirdPartyLicenses.txt
crabeam-viewer/crabeam-site/src/: main.tsx  router.tsx
crabeam-viewer/crabeam-site/src/pages/: home.tsx  viewer.tsx
crabeam-viewer/crabeam-viewer-core/: Cargo.toml
crabeam-viewer/crabeam-viewer-core/src/: lib.rs
obs-profile/Crabeam_Default/: basic.ini  streamEncoder.json
obs-profile/Crabeam_Low_Latancy/: basic.ini  streamEncoder.json
obs-profile/Crabeam_Quality/: basic.ini  service.json  streamEncoder.json
