[package]
name = "crabeam-host-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
anyhow = "1"
tokio = { version = "1.51.1", features = ["full"]}
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = "1"

iroh = "0.97.0"
iroh-tickets = "0.4.0"
webrtc = "0.17.1"
